RESOLVED FIXED287766
Fix some more fullscreen crashes after 290289@main
https://bugs.webkit.org/show_bug.cgi?id=287766
Summary Fix some more fullscreen crashes after 290289@main
Alex Christensen
Reported 2025-02-15 18:26:17 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-15 18:26:27 PST
Alex Christensen
Comment 2 2025-02-15 18:28:42 PST
EWS
Comment 3 2025-02-15 18:41:05 PST
Committed 290455@main (fd292e91ff83): <https://commits.webkit.org/290455@main> Reviewed commits have been landed. Closing PR #40679 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.