Fix some more fullscreen crashes after 290289@main https://bugs.webkit.org/show_bug.cgi?id=287766 rdar://144931577

Unreviewed.

290289@main introduced a few cases where we call a CompletionHandler
without checking if it is null.  There are a few places where we pass in a null
CompletionHandler, though.  This makes them do nothing instead of crash,
which is what we did before 290289@main.

* Source/WebCore/dom/DocumentFullscreen.cpp:
(WebCore::DocumentFullscreen::webkitExitFullscreen):
* Source/WebCore/dom/FullscreenManager.cpp:
(WebCore::FullscreenManager::exitRemovedFullscreenElement):

Canonical link: https://commits.webkit.org/290455@main